image overlapping with text-issue fix

--- a/css/style2.css
+++ b/css/style2.css
@@ -283,6 +283,7 @@ ul li a{
             width: 300px;
             left: 50%;
             margin-top: 20%;
+            margin-bottom: 20%;
             transform: translate(-50%);  
         }
     
